deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocnokc
  namespace: pocnokc
  labels:
    app: pocnokc
spec:
  selector:
    app: pocnokc
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
