deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocnokc
  namespace: pocnokc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pocnokc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocnokc
                port:
                  number: 8080
